# estudos_streamlit

./: README.md  pyproject.toml
dump/: apoio.txt
dump/live_streamlit/dia01/: main.py
dump/live_streamlit/dia02/: main.py
dump/live_streamlit/dia03/: main.py
src/python/: dashboard.py
src/python/pages/: dados_brutos.py
src/python/version/: dashboard_v0.py  dashboard_v1.py  dashboard_v2.py
tests/: req_json_local.py
