[project]
name = "estudo-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (==1.47.0)",
    "pandas (==2.3.1)",
    "requests (==2.32.4)",
    "plotly (==6.2.0)"
]

[tool.poetry]
packages = [{include = "estudo_streamlit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
